--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <meta property="og:type" content="website"> 
     <meta property="og:site_name" content="포토폴리오">
-    <meta property="og:title" content="포토폴리오">
+    <meta property="og:title" content="이성수 포토폴리오">
     <meta property="og:description" content="이성수의 포토폴리오"> 
     <meta property="og:image" content="images/택티컬타비(문신).png">
     <meta property="og:image:width" content="400">
@@ -60,7 +60,9 @@
             <p>나의 상상력을 마음껏 뽐내기 좋아하고,
             <br>그것을 그림으로 나타낼 수 있는 사람 이성수 입니다.</p>
         </div>
-        <div class="work2"></div>
+        <div class="work2">
+            <video src="images/gojo.mp4" controls width="100%" class="video3"></video>
+        </div>
         <div class="imagin">
             <h2>IMAGINATION</h2>
             <p>무한한 상상력은
